// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button When DOWN button Button 1`] = `
<button
  className="css-button-down"
  onClick={[Function]}
/>
`;

exports[`Button When UP button Button 1`] = `
<button
  className="css-button-up"
  onClick={[Function]}
/>
`;
